Se implementa logica central de la API estudiates - queda por implementar la logica del Swagger, el Logger(Slf4j) y el Testing

--- a/servicio_estudiante/src/main/resources/application.yaml
+++ b/servicio_estudiante/src/main/resources/application.yaml
@@ -1,3 +1,13 @@
+#ARCHIVO DE CONFIGURACION SERVCIO ESTUDIANTES
+server:
+  port: 8081
 spring:
-  application:
-    name: servicio_estudiante
+  profiles:
+    active: dev
+  jpa:
+    hibernate:
+      ddl-auto: update    #este campo de sebe cambiar a Validate para produccion
+    show-sql: true
+    spring:
+      application:
+        name: servicio-estudiante
