(Work) - Se crea la mayoria de la logica del servicio progreso, se implementa el Feing Client, y el Swagger para una sola operacion de un CRUD, los Test se van a dejar para el final en todos los servicios.

--- a/servicio_progreso/src/main/resources/application-prod.yaml
+++ b/servicio_progreso/src/main/resources/application-prod.yaml
@@ -3,4 +3,4 @@ spring:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/db_progreso_prod
     username: admin-prod
-    password:
+    password: asd123asd
