--- a/servicio_reporte/src/main/resources/application-prod.yaml
+++ b/servicio_reporte/src/main/resources/application-prod.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/db_progreso_prod
+    url: jdbc:postgresql://localhost:5432/db_reportes_prod
     username: admin-prod
     password:
