--- a/servicio_reporte/src/main/resources/application.yaml
+++ b/servicio_reporte/src/main/resources/application.yaml
@@ -1,3 +1,13 @@
+#Este es el archivo de configuracion
+server:
+  port: 8084
 spring:
-  application:
-    name: servicio_reporte
+  profiles:
+    active: dev
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    spring:
+      application:
+        name: servicio_reportes
